change overflow:scroll to overflow-y:auto in Modal.modal; change number of grid columns from 4 to 3 on recipes page; fix z-indexes of NavBar and .left section of RecipeViewPage; fix retract animation for .left section on mobile viewports

--- a/client/components/styles/CriteriaSelectorList.module.css
+++ b/client/components/styles/CriteriaSelectorList.module.css
@@ -14,5 +14,6 @@
 
 .selected {
   background-color: #ffb7b7;
+  background-color: #e98074;
   color: #fdfefe;
 }
