--- a/client/styles/RecipesPage.module.css
+++ b/client/styles/RecipesPage.module.css
@@ -68,7 +68,7 @@
 
 .recipe-grid {
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(auto, 1fr);
   column-gap: 20px;
   width: 80vw;
